style.css
/* The CSS style sheet that supports all sections of the personal website content
   Updated 06/13/2022
   Author: Joy Yeh
*/

/* "*" means that the style applies to all the conetent */
* {
    margin: 0;
    padding: 0;
    font-family: 'Poppins', sans-serif;
}

/* The large coverpage */
.header {
    min-height: 100vh;
    width: 100%;
    background-image: linear-gradient(rgba(14, 80, 234, 0.58), rgba(47, 13, 1, 0.788)), url(images/index/banner_antelope_canyon.png);
    background-position: center;
    background-size: cover;
    position: relative;
}

/* Top navigation bar */
nav {
    display: flex;
    padding: 2% 6%;

    justify-content: space-between;
    align-items: center;
}

.nav-links {
    flex: 1;
    text-align: right;
}

/* Horizontal styling of the navigation bar. */
.nav-links ul li {
    list-style: none;
    display: inline-block;
    padding: 8px 16px;
    position: relative;
}

/* Set font color to white */
.nav-links ul li a {
    color: #fff;
    text-decoration: none;
    font-size: 18px;
}

/* Animation for the end of hovering underscore effect */
.nav-links ul li::after {
    content: '';
    /*hide the bar until it's clicked */
    width: 0%;
    height: 3px;
    background: #fb8500;
    display: block;
    margin: auto;
    transition: 0.3s;
    z-index: 1;
}

/* after 0.3s transition, the bar expands fully */
.nav-links ul li:hover::after {
    width: 100%;
}

/* "Projects" dropdown button*/
.dropbtn {
    background-color: transparent;
    color: #fff;
    padding: 0px;
    font-size: 18px;
    border: none;
    cursor: pointer;
    /* More cursor types: https://www.w3schools.com/cssref/tryit.asp?filename=trycss_cursor */
}

.dropdown {
    position: relative;
    display: inline;
}

.dropdown-content {
    display: none;
    position: absolute;
    background-color: rgba(19, 50, 122, 0.92);
    min-width: 130px;
    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.4);
    z-index: 1;
}

.dropdown-content a {
    color: #fff;
    text-decoration: none;
    font-size: 18px;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}

.dropdown-content a:hover {
    background-color: #fb8500
}

.dropdown:hover .dropdown-content {
    display: block;
}

/* When not in small screen mode, the .fa icons don't show. */
nav .fa {
    display: none;
}

/* Signature png */
/* To center an image, set left and right margin to auto, and make it into a block element. */
img {
    display: block;
    margin-top: 70px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 230px;
    z-index: 0.2;
    /* Important! */
}

/* set the global background color to white */
body {
    background-color: #fff;
}

/* Main text and title styles */
.text-box h1 {
    font-size: 68px;
}

.text-box p {
    margin: 10px 0 40px;
    font-size: 18px;
    line-height: 25px;
    /* https://stackoverflow.com/questions/48370138/how-i-can-set-margin-between-lines-in-one-paragraph */
    padding: 3px;
    color: rgb(126, 34, 0);
}

/* Welcome */
/* Change the welcome page */
.welcome h1 {
    padding-top: 32px;
    font-size: 56px;
    color: rgba(10, 47, 136, 0.85);
    text-align: center;
}

.welcome p {
    margin: 20px 60px 60px;
    font-size: 22px;
    line-height: 36px;
    /* https://stackoverflow.com/questions/48370138/how-i-can-set-margin-between-lines-in-one-paragraph */
    padding: 3px;
    color: rgb(9, 28, 72);
}


/* Accomodation for small device */
@media(max-width: 700px) {

    /* Small-screen nav bar design */
    .nav-links ul li {
        display: block;
    }

    .nav-links {
        position: fixed;
        background: rgb(19, 50, 122);
        height: 100vh;
        width: 200px;
        top: 0;
        left: -200px;
        text-align: left;
        z-index: 2;
        transition: 0.3s;
    }

    /* The cross icon for the screen menu */
    nav .fa {
        display: block;
        color: rgb(255, 255, 255);
        margin: 10px;
        font-size: 22px;
        cursor: pointer;
    }

    .nav-links ul {
        padding: 30px;
    }

    /* Make the background image smaller */
    .header {
        min-height: 60vh;
        width: 100%;
        height: 60%;
        background-image: linear-gradient(rgba(14, 80, 234, 0.58), rgba(47, 13, 1, 0.788)), url(images/index/banner_antelope_canyon.png);
        background-position: center;
        background-size: cover;
        position: relative;
    }

    /* Adjust the welcome page for small page */
    .welcome h1 {
        padding-top: 24px;
        font-size: 36px;
    }

    .welcome p {
        font-size: 16px;
        line-height: 26px;
    }
}

